--- a/hsmoney/build.gradle
+++ b/hsmoney/build.gradle
@@ -16,7 +16,7 @@ apply plugin: 'java'
 apply plugin: 'eclipse-wtp'
 apply plugin: 'org.springframework.boot'
 apply plugin: 'io.spring.dependency-management'
-apply plugin: 'war'
+apply plugin: 'war' 
 
 group = 'com.example'
 version = '0.0.1-SNAPSHOT'
@@ -34,10 +34,16 @@ configurations {
 
 dependencies {
 	//compile('org.springframework.boot:spring-boot-starter-data-mongodb')
+	compile('org.mybatis.spring.boot:mybatis-spring-boot-starter:1.3.2')
+	runtime('mysql:mysql-connector-java')
+	
 	compile('javax.servlet:jstl')
 	compile('org.apache.tomcat.embed:tomcat-embed-jasper')
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compileOnly('org.projectlombok:lombok')
 	providedRuntime('org.springframework.boot:spring-boot-starter-tomcat')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
+
+	compile('com.fasterxml.jackson.core.jackson-databind:2.9.4') //response json type	 
+	 
 }
