--- a/hsmoney/src/main/resources/application.properties
+++ b/hsmoney/src/main/resources/application.properties
@@ -1,5 +1,14 @@
 server.port=80
-
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
  
+ #######DB connect#########
+spring.datasource.driver-class-name= com.mysql.jdbc.Driver
+
+#######mybatis location#########
+mybatis.mapper-locations=/mybatis/mapper/*.xml
+
+#######DB Info#########
+spring.datasource.url=jdbc:mysql://localhost:3306/hsmoney_db?characterEncoding=utf8&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=1234
