--- a/hsmoney/build.gradle
+++ b/hsmoney/build.gradle
@@ -45,5 +45,7 @@ dependencies {
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 
 	compile('com.fasterxml.jackson.core.jackson-databind:2.9.4') //response json type	 
+	
+	compile ('com.googlecode.json-simple:json-simple:1.1.1') //json
 	 
 }
