--- a/hsmoney/src/main/resources/application.properties
+++ b/hsmoney/src/main/resources/application.properties
@@ -9,6 +9,6 @@ spring.datasource.driver-class-name= com.mysql.jdbc.Driver
 mybatis.mapper-locations=/mybatis/mapper/*.xml
 
 #######DB Info#########
-spring.datasource.url=jdbc:mysql://localhost:3306/hsmoney_db?characterEncoding=utf8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/hsmoney_db?allowMultiQueries=true&characterEncoding=utf8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=1234
